# jmath

./: .gitignore  AUTHORS  Makefile.in  NEWS  README  README.rst  config.h.in  configure  configure.ac
src/: Doxyfile  Makefile.am  Makefile.in  add.c  handmake  math.c  math.h  test.c
